--- a/css/estilo.css
+++ b/css/estilo.css
@@ -12,16 +12,37 @@
 
 .TextoDados{
     font-family:Verdana;
-    font-size: 8pt; 
-    
+    font-size: 7pt;     
 }
 
 .LinkDados{
     font-family:Verdana;
-    font-size: 8pt;    
-    color:#4DA8DC;
+    font-size: 7pt;    
+    color:rgba(178,34,34,1);
 }
 
 .LinhaForm{
     margin-top:15px;
+}
+
+.MenuTopo{
+    background-color: rgba(54,54,54,1);
+}
+
+.LinkTopo{
+    color: rgba(255,255,255,1);
+}
+
+.TopoTabela{
+    font-family:Verdana;
+    font-size: 8pt;    
+    font-weight:bold;
+}
+
+.BotaoDetalhes{
+    background-color: rgba(255,255,255,1);
+    border-style:solid;
+    border-color:rgba(0,100,255,1);
+    color:rgba(0,100,255,1);
+    border-width:1px;    
 }
